2019-02-02  Nick Clifton  <nickc@redhat.com>

	2.32 Release
	* configure: Regenerate.
	* po/ld.pot: Regenerate.

2019-01-31  Alan Modra  <amodra@gmail.com>

	* NEWS: Mention -t change.
	* ld.texi (--trace/-t): Expand documentation a little.

2019-01-29  Nick Clifton  <nickc@redhat.com>

	* Import from mainline:
	2019-01-28  Alan Modra  <amodra@gmail.com>

	PR 24008
	* ldexp.h (lang_phase_type): Add lang_fixed_phase_enum.
	* ldexp.c (fold_name): Move expld.assign_name check later to
	avoid an extra lookup.
	(exp_fold_tree_1): When lang_fixed_phase_enum, don't change symbol
	values, and don't clear expld.assign_name.
	* ldlang.c (lang_map): Set expld.phase to lang_fixed_phase_enum.
	(print_assignment): Resolve entire assignment expression.
	Don't access symbol u.def unless symbol is defined.

2019-01-29  Eric Botcazou  <ebotcazou@adacore.com>

	* testsuite/ld-ifunc/ifunc.exp: Skip pr23169 on SPARC.

2019-01-25  Nick Clifton  <nickc@redhat.com>

	* po/bg.po: Updated Bulgarian translation.

2019-01-21  Nick Clifton  <nickc@redhat.com>

	* po/uk.po: Updated Ukranian translation.
	* po/pr_BR.po: Updated Brazilian Portuguese translation.

2019-01-19  Nick Clifton  <nickc@redhat.com>

	* configure: Regenerate.
	* po/ld.pot: Regenerate.

2018-06-24  Nick Clifton  <nickc@redhat.com>

	2.32 branch created.

2019-01-16  Kito Cheng  <kito@andestech.com>

	* testsuite/ld-elf/orphan-region.d: XFAIL for RISC-V, because add new
	section.
	* testsuite/ld-riscv-elf/ld-riscv-elf.exp: Add new tests.
	* testsuite/ld-riscv-elf/attr-merge-arch-01.d: New test.
	* testsuite/ld-riscv-elf/attr-merge-arch-01a.s: Likewise.
	* testsuite/ld-riscv-elf/attr-merge-arch-01b.s: Likewise.
	* testsuite/ld-riscv-elf/attr-merge-arch-02.d: Likewise.
	* testsuite/ld-riscv-elf/attr-merge-arch-02a.s: Likewise.
	* testsuite/ld-riscv-elf/attr-merge-arch-02b.s: Likewise.
	* testsuite/ld-riscv-elf/attr-merge-arch-03.d: Likewise.
	* testsuite/ld-riscv-elf/attr-merge-arch-03a.s: Likewise.