@@ -1,3 +1,9 @@
+2019-03-06  Nick Bowler  <nbowler@draconx.ca>
+
+	PR 24289
+	* ldexp.c (fold_name): Allow lookups of the LENGTH and ORIGIN
+	attributes during the first phase.
+
 2019-02-02  Nick Clifton  <nickc@redhat.com>
 
 	2.32 Release
